--- a/templates/index.html
+++ b/templates/index.html
@@ -3,69 +3,104 @@
 <head>
     <title>HOSPITAL SEARCHER</title>
 </head>
-<body>
-<form method="POST" action="best_ten_state">
-    <h3>Find TOP 10 hospital in your state</h3>
-    <label for="top_10">Find your state:</label>
-    <select type="text" name="state" id="top_10">
-        <option value="AL">Alabama</option>
-        <option value="AK">Alaska</option>
-        <option value="AZ">Arizona</option>
-        <option value="AR">Arkansas</option>
-        <option value="CA">California</option>
-        <option value="CO">Colorado</option>
-        <option value="CT">Connecticut</option>
-        <option value="DE">Delaware</option>
-        <option value="DC">District Of Columbia</option>
-        <option value="FL">Florida</option>
-        <option value="GA">Georgia</option>
-        <option value="HI">Hawaii</option>
-        <option value="ID">Idaho</option>
-        <option value="IL">Illinois</option>
-        <option value="IN">Indiana</option>
-        <option value="IA">Iowa</option>
-        <option value="KS">Kansas</option>
-        <option value="KY">Kentucky</option>
-        <option value="LA">Louisiana</option>
-        <option value="ME">Maine</option>
-        <option value="MD">Maryland</option>
-        <option value="MA">Massachusetts</option>
-        <option value="MI">Michigan</option>
-        <option value="MN">Minnesota</option>
-        <option value="MS">Mississippi</option>
-        <option value="MO">Missouri</option>
-        <option value="MT">Montana</option>
-        <option value="NE">Nebraska</option>
-        <option value="NV">Nevada</option>
-        <option value="NH">New Hampshire</option>
-        <option value="NJ">New Jersey</option>
-        <option value="NM">New Mexico</option>
-        <option value="NY">New York</option>
-        <option value="NC">North Carolina</option>
-        <option value="ND">North Dakota</option>
-        <option value="OH">Ohio</option>
-        <option value="OK">Oklahoma</option>
-        <option value="OR">Oregon</option>
-        <option value="PA">Pennsylvania</option>
-        <option value="RI">Rhode Island</option>
-        <option value="SC">South Carolina</option>
-        <option value="SD">South Dakota</option>
-        <option value="TN">Tennessee</option>
-        <option value="TX">Texas</option>
-        <option value="UT">Utah</option>
-        <option value="VT">Vermont</option>
-        <option value="VA">Virginia</option>
-        <option value="WA">Washington</option>
-        <option value="WV">West Virginia</option>
-        <option value="WI">Wisconsin</option>
-        <option value="WY">Wyoming</option>
-    </select>
-    <input type="submit" value="Search"/>
-</form>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
+body,h1,h2,h3,h4,h5,h6,button {font-family: "Raleway", sans-serif}
+.w3-bar,h1 {font-family: "Montserrat", sans-serif}
+</style>
+
+
+<body class="w3-light-grey">
+
+    <!-- Header -->
+<header class="w3-container w3-center" style="padding:60px 16px">
+  <h1 class="w3-margin w3-jumbo">HOSPITAL SEARCHER</h1>
+</header>
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:1532px;">
+
+    <div class="w3-container w3-margin-top" id="rooms">
+        <h3>Top 10 hospital in your state</h3>
+        <p> PROVIDE SOME EXPLANATIONS???????</p>
+    </div>
+
+    <div class="w3-margin-left">
+            <form method="POST" action="best_ten_state">
+            <label for="top_10"><i class="fa fa-map-marker" style="width:30px"></i>State<br /></label>
+            <select type="text" name="state" id="top_10">
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+            </select>
+            <input class="w3-button w3-white w3-border w3-round-large" style="width:90px" type="submit" value="Search"/> 
+        </form>
+    </div>
+
+
+<div class="w3-container w3-margin-top" id="rooms">
+        <h3>Top 10 hospitals given state and measure name based on their scores</h3>
+        <p> PROVIDE SOME EXPLANATIONS???????</p>
+</div>
+
+<div class="w3-margin-left">
 <form method="POST" action="top_hospital_state">
-    <h3>Top 10 hospitals given state and measure name based on their scores</h3>
-    <label for="top_10_state">Select your state and measurement:</label>
+    <label for="top_10_states"><i class="fa fa-map-marker" style="width:30px"></i>State<br /></label>
     <select type="text" name="state" id="top_10_state">
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
@@ -119,7 +154,7 @@
         <option value="WI">Wisconsin</option>
         <option value="WY">Wyoming</option>
     </select>
-
+    <label for="top_10_states"><br /><br /><i class="fa fa-map-marker" style="width:30px"></i>Measurement<br /></label>
     <select type="text" name="measurement" id="top_10_measure">
         <option value="Serious blood clots after surgery">Serious blood clots after surgery</option>
         <option value="Perioperative Hemorrhage or Hematoma Rate">Perioperative Hemorrhage or Hematoma Rate</option>
@@ -144,12 +179,20 @@
         <option value="Death rate for CABG surgery patients">Death rate for CABG surgery patients</option>
         <option value="A wound that splits open after surgery on the abdomen or pelvis">A wound that splits open after surgery on the abdomen or pelvis</option>
     </select>
-    <input type="submit" value="Search"/>
+    <input class="w3-button w3-white w3-border w3-round-large" style="width:90px" type="submit" value="Search"/>
 </form>
 
+</div>
+
+<div class="w3-container w3-margin-top" id="rooms">
+        <h3>Death Rate Rank</h3>
+        <p> PROVIDE SOME EXPLANATIONS???????</p>
+</div>
+
+<div class="w3-margin-left">
 <form method="POST" action="death_rate_rank">
-    <h3>Death Rate Rank</h3>
-    <label for="causes">Select your cause and year:</label>
+    <label for="causes"><i class="fa fa-map-marker" style="width:30px"></i>Cause<br /></label>
+    <!-- <label for="causes">Select your cause and year:</label> -->
     <select type="text" name="cause" id="causes">
         <option value="Alzheimer's disease">Alzheimer's disease</option>
         <option value="Influenza and pneumonia">Influenza and pneumonia</option>
@@ -164,13 +207,61 @@
         <option value="CLRD">CLRD</option>
     </select>
 
+    <label for="year"><br /><br /><i class="fa fa-map-marker" style="width:30px"></i>Year<br /></label>
     <select type="text" name="year" id="yearid">
         <option value="2017">2017</option>
         <option value="2016">2016</option>
+        <option value="2015">2015</option>
+        <option value="2014">2014</option>
+        <option value="2013">2013</option>
+        <option value="2012">2012</option>
+        <option value="2011">2011</option>
+        <option value="2010">2010</option>
+        <option value="2009">2009</option>
+        <option value="2008">2008</option>
+        <option value="2007">2007</option>
+        <option value="2006">2006</option>
+        <option value="2005">2005</option>
+        <option value="2004">2004</option>
+        <option value="2003">2003</option>
+        <option value="2002">2002</option>
+        <option value="2001">2001</option>
+        <option value="2000">2000</option>
+        <option value="1999">1999</option>
     </select>
 
-    <input type="submit" value="Search"/>
+    <input class="w3-button w3-white w3-border w3-round-large" style="width:90px" type="submit" value="Search"/>
 </form>
+
+</div>
+
+<div class="w3-container w3-margin-top" id="rooms">
+        <h3>Best 10 Hospitals</h3>
+        <p> PROVIDE SOME EXPLANATIONS???????</p>
+</div>
+
+<div class="w3-margin-left">
+
+<form method="POST" action="best_ten">
+    <input class="w3-button w3-white w3-border w3-round-large" style="width:90px" type="submit" value="Search"/>
+</form>
+
+</div>
+
+</div>
+
+<script>
+
+// Open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.width = "100%";
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
     
 </body>
 </html>
