--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,10 @@
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                             
                             <style>
-                                body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+                                body,h1,h2,h3,h4,h5,h6,p,label {
+                                    font-family: "Lato", sans-serif;
+                                    color: #ffffff
+                                }
                                 body, html {
                                     height: 100%;
                                     color: #777;
@@ -22,19 +25,21 @@
                             
                             
                             <body class="w3-light-grey">
-                                
+                                <div style="background-color: #D48D99 ; padding: 18px;">
+
                                 <!-- Header -->
                                 <header class="w3-center" style="padding:18px 8px">
                                     <h1 class=" w3-jumbo">
                                         HOSPITAL SEARCHER
                                     </h1>
                                 </header>
-                                
+                                </div>
+                                <br />
                                 <!-- Page content -->
                                 <div class="w3-content" style="max-width:1532px;">
                                     
-                                    <div class="w3-content w3-container w3-padding-32" id="about">
-                                        <h3>Top 10 hospital in your state </h3>
+                                    <div style="background-color: #696969 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
+                                        <h3 text="#ffffff" >Top 10 hospital in your state </h3>
                                         <p> PROVIDE SOME EXPLANATIONS???????</p>
                                         
                                         
@@ -97,8 +102,8 @@
                                         </form>
                                     </div>
                                     
-                                    
-                                    <div class="w3-content w3-container w3-padding-32" id="about">
+                                    <br />
+                                    <div style="background-color: #949FB1 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
                                         <h3>Top 10 hospitals given state and measure name based on their scores</h3>
                                         <p> PROVIDE SOME EXPLANATIONS???????</p>
                                      
@@ -188,8 +193,8 @@
                                     </div>
                                     
                                     
-                                    
-                                    <div class="w3-content w3-container w3-padding-32" id="about">
+                                    <br />
+                                    <div style="background-color: #80788D ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
                                         <h3>Death Rate Rank</h3>
                                         <p> PROVIDE SOME EXPLANATIONS???????</p>
                                  
@@ -238,7 +243,7 @@
                                         
                                     </div>
                                     
-                                    <div class="w3-content w3-container w3-padding-32" id="about">
+                                    <div style="background-color: #5A6882; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
                                         <h3>Best 10 Hospitals</h3>
                                         <p> PROVIDE SOME EXPLANATIONS???????</p>
                                    
