--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
                                 <div class="w3-content" style="max-width:1532px;">
                                     
                                     <div style="background-color: #696969 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
-                                        <h3 text="#ffffff" >Top 10 hospital in your state </h3>
-                                        <p> PROVIDE SOME EXPLANATIONS???????</p>
+                                        <h3 text="#ffffff" >Top 10 Hospitals Search</h3>
+                                        <h5> Select your state to find the best hospitals!</h5>
                                         
                                         
                                         <form method="POST" action="best_ten_state">
@@ -104,8 +104,8 @@
                                     
                                     <br />
                                     <div style="background-color: #949FB1 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
-                                        <h3>Top 10 hospitals given state and measure name based on their scores</h3>
-                                        <p> PROVIDE SOME EXPLANATIONS???????</p>
+                                        <h3> Top 10 Hospitals Advance Search </h3>
+                                        <h5> Select your measurement and state to find the best hospitals!</h5>
                                      
                                         <form method="POST" action="top_hospital_state">
                                             <label for="top_10_states"><i class="fa fa-map-marker" style="width:15px"></i>State<br /></label>
@@ -242,7 +242,8 @@
                                         </form>
                                         
                                     </div>
-                                    
+                                    <br />
+
                                     <div style="background-color: #5A6882; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
                                         <h3>Best 10 Hospitals</h3>
                                         <p> PROVIDE SOME EXPLANATIONS???????</p>
