--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
                                 <!-- Page content -->
                                 <div class="w3-content" style="max-width:1532px;">
                                     <div style="background-color: #5A6882; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
-                                        <h3>Best 10 Hospitals</h3>
-                                        <h5> See the top 10 hospitals based on the overall average score. </h5>
+                                        <h3>Best 20 Hospitals</h3>
+                                        <h5> See the top 20 hospitals based on the overall average score. </h5>
                                         
                                         <form method="POST" action="best_ten">
                                             
@@ -51,8 +51,8 @@
                                     <br />
 
                                     <div style="background-color: #696969 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
-                                        <h3 text="#ffffff" >Top 10 Hospitals Search</h3>
-                                        <h5> Get the top 10 hospitals in the selected state. </h5>
+                                        <h3 text="#ffffff" >Top 20 Hospitals Search</h3>
+                                        <h5> Get the top 20 hospitals in the selected state. </h5>
                                         
                                         <form method="POST" action="best_ten_state">
                                             <label for="top_10"><i class="fa fa-map-marker" style="width:15px"></i>State<br /></label>
@@ -115,8 +115,8 @@
                                     
                                     <br />
                                     <div style="background-color: #949FB1 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
-                                        <h3> Top 10 Hospitals Advance Search </h3>
-                                        <h5> Get the top 10 hospitals by the given measurement in the selected state. </h5>
+                                        <h3> Top 20 Hospitals Advance Search </h3>
+                                        <h5> Get the top 20 hospitals by the given measurement in the selected state. </h5>
                                         
                                         <form method="POST" action="top_hospital_state">
                                             <label for="top_10_states"><i class="fa fa-map-marker" style="width:15px"></i>State<br /></label>
@@ -207,7 +207,7 @@
                                     <br />
                                     <div style="background-color: #80788D ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
                                         <h3>Death Rate Rank</h3>
-                                        <h5> See the top 10 states that have the lowest death rate. </h5>
+                                        <h5> See the rank of states that have the lowest death rate given specific measure. </h5>
                                         
                                         <form method="POST" action="death_rate_rank">
                                             <label for="causes"><i class="fa fa-male" style="width:15px"></i>Cause<br /></label>
@@ -259,7 +259,7 @@
                                 
                                 <div style="background-color: #D48D99 ; padding: 18px;" class="w3-content w3-container w3-padding-32" id="about">
                                     <h3>Death Rate Rank Advanced</h3>
-                                    <h5> Within the state with lowest death rate, select the best 10 hospitals.</h5>
+                                    <h5> Within the state with lowest death rate, select the best 20 hospitals.</h5>
                                     
                                     <form method="POST" action="death_rate_rank_hospital">
                                         <label for="causes"><i class="fa fa-male" style="width:15px"></i>Cause<br /></label>
